[package]
authors = ["Carl Nimhed"]
edition = "2021"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
panic-halt = "0.2.0"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
st7735-lcd = "0.8.1"
embedded-graphics = "0.7"
heapless = "0.7.16"

[dependencies.stm32f4xx-hal]
features = ["stm32f411", "rt"]
version = "0.13.2"

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev.package."*"] # +
opt-level = "z" # +
